@@ -1,7 +1,11 @@
 Release Note
 
+* 10/15/2014
+  * improved AtlasProdTR to set destination from dst:
+
 * 10/5/2014
   * fixed AtlasProdJobBroker for pre-assigned high prio tasks  
+
 * 10/3/2014
   * fixed JG to propagate middle-name to merged files 
 
